HREPTWO-4236 - Thumbnail view styling issues  - Added JsFunction to Widget settings for specifying a custom width&height calculation  - Added text-overflow:ellipsis and sweet FireFox workaround (using XUL)  - Added LabelWithTitle helper class
svn path=/hippo-ecm/trunk/; revision=23228

--- a/repository/addon/gallery/frontend/src/main/java/org/hippoecm/frontend/plugins/gallery/ImageGalleryPlugin.css
+++ b/repository/addon/gallery/frontend/src/main/java/org/hippoecm/frontend/plugins/gallery/ImageGalleryPlugin.css
@@ -50,6 +50,13 @@ ul.gallery-list li.selected {
 }
 
 .title {
-    margin-top: 10px;
+  width: 100px;
+  display: block;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  -o-text-overflow: ellipsis;
+  -ms-text-overflow: ellipsis;
+  overflow: hidden;
+  -moz-binding: url('ellipsis.xml#ellipsis');
 }
 
